# sim-race

SFML/SFML-2.6.1/: _build.sh  build.sh
SFML/install/lib/: libsfml-graphics-d.so.2.6.1  libsfml-graphics.so.2.6.1  libsfml-network-d.so.2.6.1  libsfml-network.so.2.6.1  libsfml-system-d.so.2.6.1  libsfml-system.so.2.6.1  libsfml-window-d.so.2.6.1  libsfml-window.so.2.6.1
SFML/install/lib/cmake/SFML/: SFMLSharedTargets-debug.cmake  SFMLSharedTargets-release.cmake
SFML/install/lib/pkgconfig/: sfml-all.pc  sfml-system.pc
SFML/install/pkgconfig/: sfml-audio.pc  sfml-graphics.pc  sfml-network.pc  sfml-window.pc
appTest/: CMakeCache.txt  CMakeLists.txt  Makefile  _runCMake.sh  apptest  cmake_install.cmake  run.sh
appTest/src/: Boat.cpp  Boat.h  Fish.cpp  Fish.h  Game.cpp  Game.h  Menu.cpp  Menu.h  Obstacle.cpp  Obstacle.h  Port.cpp  Port.h  main.cpp
libphysics/include/physics/: dynamicModel.h
rapport/: main.tex
